--- a/src/SRDocuments/Views/Item/Details.cshtml
+++ b/src/SRDocuments/Views/Item/Details.cshtml
@@ -5,7 +5,7 @@
 }
 <div class="container">
     <div class="text-center">
-        <h1>Details</h1>
+        <h1>Details2</h1>
     </div>
 
     <div class="container" style="margin-top:40px">
