--- a/src/SRDocuments/Views/Item/Details.cshtml
+++ b/src/SRDocuments/Views/Item/Details.cshtml
@@ -6,7 +6,7 @@
 <div class="container">
     <div class="text-center">
         <h1>Details</h1>
-    </div>
+    </div> fds fsdfsdf
 
     <div class="container" style="margin-top:40px">
         <div class="row">
