--- a/src/SRDocuments/Views/Item/History.cshtml
+++ b/src/SRDocuments/Views/Item/History.cshtml
@@ -17,7 +17,7 @@
             <th>Actions</th>
         </tr>
     </thead>
-    <tbody> fds fsdfsdf
+    <tbody>
         <tr class="table">
             <th scope="row">1</th>
             <td>Contrato do Bob</td>
