--- a/src/SRDocuments/Views/Item/Details.cshtml
+++ b/src/SRDocuments/Views/Item/Details.cshtml
@@ -6,7 +6,7 @@
 <div class="container">
     <div class="text-center">
         <h1>Details</h1>
-    </div> fds fsdfsdf
+    </div>
 
     <div class="container" style="margin-top:40px">
         <div class="row">
@@ -73,8 +73,6 @@
                         else
                         {
                             ViewBag.i = 1;
-                            <img src="~/@image.Locale" />
-
                         }
                     }
                 </tbody>
