Extreme changes to the database

--- a/src/SRDocuments/Views/Item/Details.cshtml
+++ b/src/SRDocuments/Views/Item/Details.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Document
 @{
-    ViewBag.Title = $"Details of Document #{Model.Id}";
+    ViewBag.Title = $"Details of Document #{Model.DocumentID}";
     ViewBag.i = 0;
 }
 <div class="container">
