--- a/src/SRDocuments/Views/Item/ReceivedList.cshtml
+++ b/src/SRDocuments/Views/Item/ReceivedList.cshtml
@@ -24,50 +24,50 @@
                 @if (document.Finished)
                 {
                     <tr class="table-success">
-                        <th scope="row">@document.Id</th>
+                        <th scope="row">@document.DocumentID</th>
                         <td>@document.Name</td>
                         <td>@document.SentDate</td>
                         <td>@document.SentBy.FullName</td>
                         <td>
-                            <a class="blue-text" asp-action="Details" asp-controller="Item" asp-route-id="@document.Id"><i class="fa fa-info-circle" title="Info"></i></a>
+                            <a class="blue-text" asp-action="Details" asp-controller="Item" asp-route-id="@document.DocumentID"><i class="fa fa-info-circle" title="Info"></i></a>
                         </td>
                     </tr>
                 }
                 else if (document.NotAccepted)
                 {
                     <tr class="table-danger">
-                        <th scope="row">@document.Id</th>
+                        <th scope="row">@document.DocumentID</th>
                         <td>@document.Name</td>
                         <td>@document.SentDate</td>
                         <td>@document.SentBy.FullName</td>
                         <td>
-                            <a class="blue-text" asp-action="Details" asp-controller="Item" asp-route-id="@document.Id"><i class="fa fa-info-circle" title="Info"></i></a>
-                            <a class="black-text" asp-action="Reply" asp-controller="Item" asp-route-id="@document.Id"><i class="fa fa-reply" title="Answer"></i></a>
+                            <a class="blue-text" asp-action="Details" asp-controller="Item" asp-route-id="@document.DocumentID"><i class="fa fa-info-circle" title="Info"></i></a>
+                            <a class="black-text" asp-action="Reply" asp-controller="Item" asp-route-id="@document.DocumentID"><i class="fa fa-reply" title="Answer"></i></a>
                         </td>
                     </tr>
                 }
                 else if (document.AnswerDate != null)
                 {
                     <tr class="table-warning">
-                        <th scope="row">@document.Id</th>
+                        <th scope="row">@document.DocumentID</th>
                         <td>@document.Name</td>
                         <td>@document.SentDate</td>
                         <td>@document.SentBy.FullName</td>
                         <td>
-                            <a class="blue-text" asp-action="Details" asp-controller="Item" asp-route-id="@document.Id"><i class="fa fa-info-circle" title="Info"></i></a>
+                            <a class="blue-text" asp-action="Details" asp-controller="Item" asp-route-id="@document.DocumentID"><i class="fa fa-info-circle" title="Info"></i></a>
                         </td>
                     </tr>
                 }
                 else
                 {
                     <tr class="table">
-                        <th scope="row">@document.Id</th>
+                        <th scope="row">@document.DocumentID</th>
                         <td>@document.Name</td>
                         <td>@document.SentDate</td>
                         <td>@document.SentBy.FullName</td>
                         <td>
-                            <a class="blue-text" asp-action="Details" asp-controller="Item" asp-route-id="@document.Id"><i class="fa fa-info-circle" title="Info"></i></a>
-                            <a class="black-text" asp-action="Reply" asp-controller="Item" asp-route-id="@document.Id"><i class="fa fa-reply" title="Answer"></i></a>
+                            <a class="blue-text" asp-action="Details" asp-controller="Item" asp-route-id="@document.DocumentID"><i class="fa fa-info-circle" title="Info"></i></a>
+                            <a class="black-text" asp-action="Reply" asp-controller="Item" asp-route-id="@document.DocumentID"><i class="fa fa-reply" title="Answer"></i></a>
                         </td>
                     </tr>
                 }
