--- a/src/SRDocuments/Views/Item/Reply.cshtml
+++ b/src/SRDocuments/Views/Item/Reply.cshtml
@@ -58,7 +58,7 @@
         </div>
     </div>
     <form asp-action="Reply" method="post" enctype="multipart/form-data">
-        <input type="hidden" id="documentId" name="documentId" value="@Model.Id"/>
+        <input type="hidden" id="documentId" name="documentId" value="@Model.DocumentID"/>
         <div class="row" style="margin-top: 30px;">
             <div class="col-sm-12 col-md-6">
                 <div class="input-group">
