Mass change. Changed all the methods in the controllers. Changed EntityFramework for Dapper. added a class named connection for connections with the database.

--- a/src/SRDocuments/Views/Account/ForgotPassword.cshtml
+++ b/src/SRDocuments/Views/Account/ForgotPassword.cshtml
@@ -25,7 +25,7 @@
             <div class="text-center" style="margin-bottom: 40px">
                 <button type="submit" class="btn btn-mdb">Send Email</button>
                 <hr />  
-                <a asp-controller="Account" asp-action="Login">Volgin</a> 
+                <a asp-controller="Account" asp-action="Login">Back</a> 
             </div>
         </form>
     </div>
