--- a/src/SRDocuments/Views/Item/Details.cshtml
+++ b/src/SRDocuments/Views/Item/Details.cshtml
@@ -66,8 +66,8 @@
                         {
                             <tr>
                                 <td>@image.Name</td>
+                                <td>@image.DateSent</td>
                                 <td><a href="~/@image.Locale" class="btn-link" download><i class="fa fa-download"></i> Download</a></td>
-                            
                             </tr>
                         }
                         else
@@ -92,6 +92,7 @@
                             {
                                 <tr>
                                     <td>@image.Name</td>
+                                    <td>@image.DateSent</td>
                                     <td><a href="~/@image.Locale" class="btn-link" download><i class="fa fa-download"></i> Download</a></td>
                                 </tr>
                             }
