--- a/src/SRDocuments/Views/Shared/_Layout.cshtml
+++ b/src/SRDocuments/Views/Shared/_Layout.cshtml
@@ -8,7 +8,7 @@
         <link href="~/lib/MDBootstrap/css/mdb.css" rel="stylesheet" />
         <link href="~/lib/font-awesome/css/font-awesome.css" rel="stylesheet" />
         <link href="~/css/site.css" rel="stylesheet"/>
-        <link href="https://fonts.googleapis.com/css?family=Roboto:100" rel="stylesheet">
+        <!--<link href="https://fonts.googleapis.com/css?family=Roboto:100" rel="stylesheet">-->
         @if (SignInManager.IsSignedIn(User))
         {
             <link href="~/css/sideBar.css" rel="stylesheet" />
@@ -24,7 +24,7 @@
         <link href="~/lib/MDBootstrap/css/mdb.min.css" rel="stylesheet" />
         <link href="~/lib/font-awesome/css/font-awesome.min.css" rel="stylesheet" />
         <link href="~/css/site.min.css" rel="stylesheet" />
-        <link href="https://fonts.googleapis.com/css?family=Roboto:100,300" rel="stylesheet">
+        <!--<link href="https://fonts.googleapis.com/css?family=Roboto:100" rel="stylesheet">-->
         @if (SignInManager.IsSignedIn(User))
         {
             <link href="~/css/sideBar.min.css" rel="stylesheet" />
